--- a/pyqt/untitled.ui
+++ b/pyqt/untitled.ui
@@ -47,7 +47,7 @@
       <string>frame</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignCenter</set>
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
    </item>
